[package]
name = "fx-callback"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license-file = "LICENSE"
license = "Apache-2.0"
description = "A subscription based callback to inform subscribers about relevant data events within structs."
repository = "https://github.com/yoep/fx-callback"
readme = "README.md"
exclude = [
    "/.config",
    "/.github",
]

[lib]
crate-type = ["rlib"]

[dependencies]
fx-handle = "1.0.0"
log = "0.4.26"
tokio = { version = "1.43", features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
log4rs = "1.3.0"
tokio = { version = "1.43", features = ["rt", "macros", "time"] }